--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "autobind-decorator": "^1.4.0",
     "autoprefixer": "6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -60,6 +62,9 @@
     "test": "mocha --opts src/mocha.opts"
   },
   "babel": {
+    "plugins": [
+      "transform-decorators-legacy"
+    ],
     "presets": [
       "es2015",
       "react",
