--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gauche-ou-droite-client",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.16.1",
     "react": "^15.5.4",
