Add add-sonar-properties-file to scanned branches in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - add-sonar-properties-file
   pull_request:
     types: [opened, synchronize, reopened]
 
